; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/drivers/opl4/extr_opl4_lib.c_snd_opl4_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/drivers/opl4/extr_opl4_lib.c_snd_opl4_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_opl4 = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_opl4*)* @snd_opl4_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_opl4_free(%struct.snd_opl4* %0) #0 {
  %2 = alloca %struct.snd_opl4*, align 8
  store %struct.snd_opl4* %0, %struct.snd_opl4** %2, align 8
  %3 = load %struct.snd_opl4*, %struct.snd_opl4** %2, align 8
  %4 = getelementptr inbounds %struct.snd_opl4, %struct.snd_opl4* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @release_and_free_resource(i32 %5)
  %7 = load %struct.snd_opl4*, %struct.snd_opl4** %2, align 8
  %8 = getelementptr inbounds %struct.snd_opl4, %struct.snd_opl4* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @release_and_free_resource(i32 %9)
  %11 = load %struct.snd_opl4*, %struct.snd_opl4** %2, align 8
  %12 = call i32 @kfree(%struct.snd_opl4* %11)
  ret void
}

declare dso_local i32 @release_and_free_resource(i32) #1

declare dso_local i32 @kfree(%struct.snd_opl4*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
